--- a/Assignment2.tex
+++ b/Assignment2.tex
@@ -157,7 +157,7 @@ Let $d\in \mathbb{N}$. The $d$-\textsf{COLORABILITY PROBLEM} is to decide whethe
 
 \textbf{Reduction:} 
 \begin{itemize}
-\item We add three vertices to $V$, and add all edges between the three vertices and $V$:
+\item Suppose we have an arbitrary graph $G=(V,E)$. We add three vertices $x,y,z$ to $V$, and add all edges between $x,y,z$ and $V$:
 
 \begin{displaymath} 
     N=\{x,y,z\},V'=V\cup N, E'=E\cup \{(u,v)\mid u\in N, v \in V'\},G'=(V',E')
